classDiagram
    direction LR

    class Farm {
        +Long id
        +String name
        +String address
        +String contactEmail
        +String visionAndGoals
    }

    class User {
        +Long id
        +String username
        +String password
        +String email
        +UserRole role
        +Double hourlyRate
        +Double monthlySalary
    }

    class Parcel {
        +Long id
        +String name
        +String cropType
        +double areaHectares
        +String coordinatesJson
    }

    class Activity {
        +Long id
        +String title
        +ActivityType type
        +Double harvestedYieldKg
        +LocalDateTime startDate
        +ActivityStatus status
        +LocalDateTime endDate
        +String comments
        +Boolean inventoryDeducted
    }

    class InventoryItem {
        +Long id
        +String name
        +ItemCategory category
        +String unitOfMeasure
        +Double quantityAvailable
        +Double minimumStockThreshold
        +Double unitPrice
    }

    class ActivityConsumption {
        +Long id
        +Double quantityUsed
        +Double unitPriceAtConsumption
    }

    class Machinery {
        +Long id
        +String name
        +String model
        +String licensePlate
        +MachineryType type
        +MachineryStatus status
        +Integer totalHours
        +Integer maintenanceIntervalHours
        +Integer nextMaintenanceHours
        +LocalDate lastMaintenanceDate
        +LocalDate purchaseDate
    }

    class MaintenanceLog {
        +Long id
        +LocalDate date
        +String description
        +Double cost
        +Integer hoursAtMaintenance
    }

    class CropSeason {
        +Long id
        +Integer harvestYear
        +String cropType
        +Double totalYieldKg
        +Double salePricePerKg
        +Double revenueOverride
    }

    class InventoryRequest {
        +Long id
        +String itemName
        +ItemCategory itemCategory
        +Double quantityRequested
        +String unitOfMeasure
        +RequestPriority priority
        +RequestStatus status
        +LocalDateTime dateCreated
    }

    Farm --> User : angajati
    Farm --> Parcel : parcele
    Farm --> InventoryItem : magazie
    Farm --> Machinery : utilaje

    Parcel --> Activity : lucrari
    Parcel --> CropSeason : istoric culturi

    Activity --> User : muncitori
    Activity --> Machinery : foloseste
    Activity --> ActivityConsumption : consumuri
    ActivityConsumption --> InventoryItem : produs

    InventoryRequest --> User : solicitant
    Machinery --> MaintenanceLog : mentenanta
